# polite

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: CI.yml
.vendored/connector-x/: Cargo.toml  GIT_COMMIT.md
.vendored/connector-x/connectorx/: Cargo.toml
examples/: demo.rs
polite/: CHANGELOG.md  Cargo.toml  README.md
polite-cli/: CHANGELOG.md  Cargo.toml  README.md
polite-cli/src/: main.rs
polite-cli/tests/: integration.rs
polite/src/: dataframe.rs  db.rs  error.rs  lib.rs  types.rs
polite/src/connectorx/: arrow_batch_iter.rs  constants.rs  data_order.rs  dispatcher.rs  errors.rs  get_arrow.rs  macros.rs  mod.rs  partition.rs  source_router.rs  sql.rs  typesystem.rs  utils.rs
polite/src/connectorx/destinations/: mod.rs
polite/src/connectorx/destinations/arrow/: arrow_assoc.rs  errors.rs  mod.rs  typesystem.rs
polite/src/connectorx/destinations/arrowstream/: arrow_assoc.rs  errors.rs  funcs.rs  mod.rs  typesystem.rs
polite/src/connectorx/sources/: mod.rs
polite/src/connectorx/sources/sqlite/: errors.rs  mod.rs
polite/src/connectorx/transports/: mod.rs  sqlite_arrow.rs  sqlite_arrowstream.rs
polite/tests/: demo.rs  error_cases.rs  int_size.rs  readme.rs  roundtrip.rs  verify.rs
polite/tests/snapshots/: readme__friends_db.snap
