[profile.dev]
codegen-units = 256
debug = false
lto = false
opt-level = 0
panic = "unwind"
strip = "debuginfo"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 2
panic = "unwind"
strip = "symbols"

[workspace]
members = ["polite", "polite-cli"]
resolver = "2"

[workspace.dependencies]
# Internal crates
polite = { path = "polite", version = "0.1.0" }

# Polars integration dependencies  
connectorx = { default-features = false, features = [
  "branch",
  "dst_polars",
  "src_sqlite",
], version = "0.4.3" }
rusqlite = "0.33.0" # must match connectorx

# Matched to ConnectorX 0.4.3 release
polars = { default-features = false, features = ["fmt"], version = "0.45" }

# --- Dev deps ---
assert_cmd = { features = ["color", "color-auto"], version = "2.0.17" }
eyre = "0.6.12"
insta = { features = ["yaml"], version = "1.43.1" }
predicates = "3.1.3"
tempfile = "3"

[workspace.package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "rusqlite × Polars interface toolkit"
edition = "2021"
homepage = "https://github.com/lmmx/polite"
keywords = ["dataframe", "interface", "polars", "schema", "sqlite"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lmmx/polite"
version = "0.1.0"
