[profile.dev]
codegen-units = 256
debug = false
lto = false
opt-level = 0
panic = "unwind"
strip = "debuginfo"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 2
panic = "unwind"
strip = "symbols"

[workspace]
members = ["polite", "polite-cli"]
resolver = "2"

[workspace.dependencies]
# Internal crates
polite = { path = "polite", version = "0.1.2" }

# Polars integration dependencies  
# connectorx = { default-features = false, features = [
#   "branch",
#   "dst_polars",
#   "src_sqlite",
# ], path = "../connector-x/connectorx" }
connectorx = { branch = "upgrade-sql", default-features = false, features = [
  "branch",
  "dst_polars",
  "src_sqlite",
], git = "https://github.com/lmmx/connector-x", subdirectory = "connectorx" }
#
# connectorx = { default-features = false, features = [
#   "branch",
#   "dst_polars",
#   "src_sqlite",
# ], version = "0.4.3" }
rusqlite = { features = [
  "column_metadata",
], version = "0.37" } # must match connectorx
# rusqlite = { version = "0.33.0" } # must match connectorx

# Matched to ConnectorX 0.4.3 release
polars = { default-features = false, features = ["fmt"], version = "0.49.1" }
# polars = { default-features = false, features = ["fmt"], version = "0.45" }
planus = { version = "=1.1.1" }
# polars-arrow-format = { path = "../arrow-format" }
polars-arrow-format = { branch = "fix-empty-df-dtypes", git = "https://github.com/lmmx/arrow-format" }

# Due to upstream issue: https://github.com/apache/arrow-rs/issues/7196
chrono = "=0.4.39"

# Used for custom error types
thiserror = "2.0.16"

# --- Dev deps ---
assert_cmd = { features = ["color", "color-auto"], version = "2.0.17" }
eyre = "0.6.12"
insta = { features = ["yaml"], version = "1.43.1" }
predicates = "3.1.3"
tempfile = "3"

[workspace.package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "rusqlite × Polars interface toolkit"
edition = "2021"
homepage = "https://github.com/lmmx/polite"
keywords = ["dataframe", "interface", "polars", "schema", "sqlite"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lmmx/polite"
version = "0.1.0"
