[profile.dev]
codegen-units = 256
debug = false
lto = false
opt-level = 0
panic = "unwind"
strip = "debuginfo"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 2
panic = "unwind"
strip = "symbols"

[workspace]
members = ["polite", "polite-cli"]
resolver = "2"

[workspace.dependencies]
# Internal crates
polite = { path = "polite", version = "0.1.3" }

# Polars integration dependencies  

# # connectorx = { default-features = false, features = [
# #   "branch",
# #   "dst_polars",
# #   "src_sqlite",
# # ], path = "../connector-x/connectorx" }
# connectorx = { branch = "upgrade-sql", default-features = false, features = [
#   "branch",
#   "dst_polars",
#   "src_sqlite",
# ], git = "https://github.com/lmmx/connector-x", subdirectory = "connectorx" }
# #
# # connectorx = { default-features = false, features = [
# #   "branch",
# #   "dst_polars",
# #   "src_sqlite",
# # ], version = "0.4.4" }

# rusqlite = { features = [
#   "column_decltype", "column_metadata",
# ], version = "0.37" } # must match connectorx

# Matched to ConnectorX 0.4.4 release
# polars = { default-features = false, features = ["fmt"], version = "0.49" }
planus = { version = "=1.1.1" }
polars = { default-features = false, features = [
  "dtype-u16",
  "dtype-u8",
  "fmt",
  "lazy",
], version = "0.49" }

# Due to upstream issue: https://github.com/apache/arrow-rs/issues/7196
chrono = "=0.4.39"

# Used for custom error types
thiserror = "2.0.16"

# Vendored from connectorx: workspace
arrow = { features = ["ffi", "prettyprint"], version = "54" }
polars-arrow = { version = "0.49" }

# Vendored from connectorx: connectorx crate
anyhow = "1"
fehler = "1"
itertools = "0.14"
log = "0.4"
owning_ref = "0.4"
rayon = "1"
serde_json = "1"
sqlparser = "0.37"
url = "2"

# Vendored from connectorx: connectorx crate (optional/feature flag deps)
# (On)
fallible-streaming-iterator = "0.1"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
rusqlite = { features = [
  "bundled",
  "chrono",
  "column_decltype",
  "column_metadata",
], version = "0.37" }
rust_decimal = { version = "1" }
urlencoding = "2.1"

# --- Dev deps ---
assert_cmd = { features = ["color", "color-auto"], version = "2.0.17" }
eyre = "0.6.12"
insta = { features = ["yaml"], version = "1.43.1" }
predicates = "3.1.3"
tempfile = "3"

[workspace.package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "rusqlite × Polars interface toolkit"
edition = "2021"
homepage = "https://github.com/lmmx/polite"
keywords = ["dataframe", "interface", "polars", "schema", "sqlite"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lmmx/polite"
version = "0.1.0"
