[package]
authors.workspace = true
categories = ["command-line-utilities", "data-structures", "database"]
description = "Command-line interface for rusqlite × Polars integration"
documentation = "https://docs.rs/polite-cli/"
edition.workspace = true
homepage.workspace = true
keywords = ["cli", "command-line", "polars", "schema", "sqlite"]
license.workspace = true
name = "polite-cli"
readme = "README.md"
repository.workspace = true
version = "0.1.0"

[dependencies]
polite.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[[bin]]
name = "polite"
path = "src/main.rs"
