[package]
authors.workspace = true
categories = ["data-structures", "database"]
description = "rusqlite × Polars bridge library"
documentation = "https://docs.rs/polite/"
edition.workspace = true
homepage.workspace = true
keywords = ["bridge", "dataframe", "polars", "sqlite"]
license.workspace = true
name = "polite"
readme = "README.md"
repository.workspace = true
version = "0.1.2"

[dependencies]
chrono.workspace = true
planus.workspace = true
polars.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

# Vendored
#connectorx.workspace = true
arrow.workspace = true
polars-arrow.workspace = true

anyhow.workspace = true
fehler.workspace = true
itertools.workspace = true
log.workspace = true
owning_ref.workspace = true
rayon.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
url.workspace = true

# Vendored from connectorx: connectorx crate (optional/feature flag deps)
# (On)
fallible-streaming-iterator.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rust_decimal.workspace = true
urlencoding.workspace = true

[dev-dependencies]
anyhow.workspace = true
eyre.workspace = true
insta.workspace = true
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = ["chrono", "planus"]
